# self-pipe

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  pyproject.toml
self_pipe/: __init__.py  pipe.py
